# financial-analysis-agent

.cursor/rules/: uv-package-management.mdc
financial-analysis-agent/: .gitignore  main.py  pyproject.toml
financial-analysis-agent/config/: prompts.py
financial-analysis-agent/src/: __init__.py  data_fetcher.py  data_models.py  query_processor.py
